RESOLVED FIXED303878
iOS simulator builds shouldn't trust MACH_VM_MAX_ADDRESS
https://bugs.webkit.org/show_bug.cgi?id=303878
Summary iOS simulator builds shouldn't trust MACH_VM_MAX_ADDRESS
Keith Miller
Reported 2025-12-09 13:58:04 PST
...
Attachments
Keith Miller
Comment 1 2025-12-09 13:58:06 PST
Keith Miller
Comment 2 2025-12-09 14:02:48 PST
EWS
Comment 3 2025-12-10 12:14:54 PST
Committed 304250@main (4163598c5a3d): <https://commits.webkit.org/304250@main> Reviewed commits have been landed. Closing PR #55129 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.