iOS simulator builds shouldn't trust MACH_VM_MAX_ADDRESS https://bugs.webkit.org/show_bug.cgi?id=303878 rdar://165720557

Reviewed by Mark Lam.

When moving the HAVE_36_BITS flag we started using the
`MACH_VM_MAX_ADDRESS` system define to determine the address space of
the system. That macro isn't correct for the simulator since it just
uses the system mmap, which will happily map to addresses past the first
36 bits.

Canonical link: https://commits.webkit.org/304250@main