Source/bmalloc/bmalloc/BPlatform.h
@@ -324,7 +324,8 @@
 #if BCPU(ADDRESS64)
 #if BHAVE(36BIT_ADDRESS)
 #define BOS_EFFECTIVE_ADDRESS_WIDTH 36
-#elif BOS(DARWIN)
+/* iOS simulators lie about the size of the address space */
+#elif BOS(DARWIN) && !BPLATFORM(IOS_FAMILY_SIMULATOR)
 #define BOS_EFFECTIVE_ADDRESS_WIDTH (bmalloc::getMSBSetConstexpr(MACH_VM_MAX_ADDRESS) + 1)
 #else
 /* We strongly assume that effective address width is <= 48 in 64bit architectures (e.g. NaN boxing). */
